--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,14 @@
-<form action="/data" method = "POST">
-    <p>Address <input type = "text" name = "Address" /></p>
-    <p>Postcode <input type = "text" name = "Postcode" /></p>
-    <p><input type = "submit" value = "Submit" /></p>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Search LocateFamily.com</title>
+	</head>
+	<body>
+		<form action="/results" method = "POST">
+			<p>Address <input type = "text" name = "Address" /></p>
+			<p>Postcode <input type = "text" name = "Postcode" /></p>
+			<p><input type = "submit" value = "Submit" /></p>
+		</form>
+	</body>
+</html>
